deleted template classes files. Fixed composite product related product overflow issue

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -214,7 +214,7 @@ ol{
 }
 .site-content{
 	flex: 1;
-	padding:120px 20px 20px 20px !important;
+	padding:120px 20px 0 20px !important;
 	@media(max-width:1023px){
 		padding-top: 80px !important;
 	}
@@ -740,10 +740,7 @@ a:focus,.focus a{
 			margin: 0;
 			padding:0;
 			background: transparent;
-			float: left;
-			@media (max-width: 1023px){
-				
-			}	   
+			float: left;  
 		}
 	}
 }
@@ -1057,7 +1054,8 @@ a:focus,.focus a{
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
-    background: transparent;
+    background: #fff;
+	z-index: 9;
     @media (max-width: 1023px){
 		position: fixed;
 	    bottom: 50px;
@@ -1899,7 +1897,6 @@ a:focus,.focus a{
 &.page-template-template-fullwidth-php{
 	.site-content{
 		flex: 1;
-		padding:0 !important;
 		@media(max-width: 1023px){
 			padding-top: 60px !important;
 		}
@@ -1910,7 +1907,7 @@ a:focus,.focus a{
 		float: right;
 		main{
 			@include flexbox;
-			flex-direction: row-reverse;
+			flex-direction: column-reverse;
 			@media(max-width: 1023px){
 				display:block;
 			}
@@ -1960,7 +1957,6 @@ a:focus,.focus a{
 			.accordion-container{
 				width: 100%;
 				max-width: 50%;
-				margin-top: 120px;
 				padding-right: 0;
 				box-sizing:border-box;
 				@media(max-width: 1023px){
